--- a/templates/home.html
+++ b/templates/home.html
@@ -11,29 +11,36 @@
         height: 360px;
         width:100%;
         object-fit: cover;
+        margin-bottom: 16px;
       }
     </style>
 </head>
   
 <body>
+  {% include 'nav.html' %}
+  <img class="img-fluid" id="banner" src ="static/banner.jpeg" height="320">
   <div class="container">
     <h1 class ="text-center mt-2 mb-4"> RK-Careers</h1>
-    <img class="img-fluid" id="banner" src ="static/banner.jpeg" height="320">
-    <h2 class ="text-center mt-2 mb-4">About RK-Careers</h2>
+  
+ <div class="row" style="margin-bottom:16px">
+   <div class="col-md-6">
+   
     <p class="lead">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-    <p>
-      <h2 class ="text-center mt-2 mb-4"> Job Open Positions</h2>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et   dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+    </p>
+   </div>
+    <div class="d-none d-md-block col-md-6">
+      <img src ="static/sideimage.jpg" style="height:320px;border-radius:4px">
+      </div>
+ </div>
+    <h2 class ="text-center mt-2 mb-4"> Job Open Positions</h2>
     <div>
         {% for job in jobs %}
            {% include 'jobitems.html'%}
         {% endfor %}
     </div>
-
-    <div class ="text-center">
-      <button class="btn btn-primary btn-lg"> Contact Us</button>
-      <p class ="mt-4"> Copyright 2024, RK</p>
-    </div>
+    {% include 'footer.html' %}
+    
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ></script>
 </body>
 </html>
