--- a/templates/jobitems.html
+++ b/templates/jobitems.html
@@ -1,4 +1,5 @@
 <div class="border-bottom pb-3">
+  <div> {{job[1]}}  </div> 
   <div class="row">
   <div class ="col-9">
   <h4 class="text-primary mt-3"> 
