job page integration

--- a/templates/jobitems.html
+++ b/templates/jobitems.html
@@ -1,5 +1,4 @@
 <div class="border-bottom pb-3">
-  <div> {{job[1]}}  </div> 
   <div class="row">
   <div class ="col-9">
   <h4 class="text-primary mt-3"> 
@@ -23,7 +22,9 @@
   {% endif %}
     </div>
   <div class ="col-2 row align-items-end"> 
-    <button type ="button" class="btn btn-outline-primary">Apply</button>
+    <a href="/job/{{ job['id'] }}">
+      <button type ="button" class="btn btn-outline-primary">Apply</button>
+      </a>
   </div>
   </div>
 </div>
