--- a/templates/home.html
+++ b/templates/home.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Careers</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-    <style>
-      #banner{
-        height: 360px;
-        width:100%;
-        object-fit: cover;
-        margin-bottom: 16px;
-      }
-    </style>
+    {% include 'bootstrap.html' %}
 </head>
   
 <body>
   {% include 'nav.html' %}
-  <img class="img-fluid" id="banner" src ="static/banner.jpeg" height="320">
+  {% include 'banner.html' %}
   <div class="container">
-    <h1 class ="text-center mt-2 mb-4"> RK-Careers</h1>
-  
+    <h1 class ="text-center mt-2 mb-4"> RK-Careers
+    </h1>
  <div class="row" style="margin-bottom:16px">
    <div class="col-md-6">
-   
     <p class="lead">
-      Step into a world of endless possibilities at our innovative career hub, where every individual's unique talents are celebrated and nurtured. With a kaleidoscope of opportunities spanning diverse industries, we offer more than just jobs; we provide platforms for personal growth and professional development. From seasoned experts to fresh graduates, our inclusive environment welcomes everyone to embark on a journey of exploration and discovery. Fuel your passion, unleash your creativity, and dare to dream big as you carve out your path towards success. Join a vibrant community of like-minded individuals driven by a shared vision of making a difference in the world. With flexible work arrangements, comprehensive benefits, and a supportive culture, we empower our team members to thrive both personally and professionally. Your adventure begins here—come be a part of something extraordinary.
+        Step into a world of endless possibilities at our innovative career hub, where every individual's unique talents are celebrated and nurtured. With a kaleidoscope of opportunities spanning diverse industries, we offer more than just jobs; we provide platforms for personal growth and professional development. From seasoned experts to fresh graduates, our inclusive environment welcomes everyone to embark on a journey of exploration and discovery. Fuel your passion, unleash your creativity, and dare to dream big as you carve out your path towards success. Join a vibrant community of like-minded individuals driven by a shared vision of making a difference in the world. With flexible work arrangements, comprehensive benefits, and a supportive culture, we empower our team members to thrive both personally and professionally. Your adventure begins here—come be a part of something extraordinary.
     </p>
    </div>
     <div class="d-none d-md-block col-md-6">
